[project]
name = "rollingforcing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "accelerate>=1.1.1",
    "av==13.1.0",
    "dashscope>=1.25.15",
    "diffusers==0.31.0",
    "dominate>=2.9.1",
    "easydict>=1.13",
    "einops>=0.8.2",
    "flash-attn>=2.8.3",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "ftfy>=6.3.1",
    "gradio>=4.44.0",
    "huggingface-hub[cli]>=1.8.0",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "lmdb>=2.1.1",
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "numpy==1.24.4",
    "omegaconf>=2.3.0",
    "open-clip-torch>=3.3.0",
    "opencv-python>=4.9.0.80",
    "packaging>=26.0",
    "pycocotools>=2.0.11",
    "pydantic==2.10.6",
    "scikit-image>=0.25.2",
    "sentencepiece>=0.2.1",
    "starlette>=0.52.1",
    "tensorboard>=2.20.0",
    "tokenizers>=0.20.3",
    "torch==2.5.1",
    "torchao>=0.16.0",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.67.3",
    "transformers>=4.49.0",
    "wandb>=0.25.1",
    "wheel>=0.46.3",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.extra-build-dependencies]
flash-attn = ["wheel"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]
